Deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
    labels:    
        app: httpserver  
    name: httpserver
spec:  
    progressDeadlineSeconds: 600  
    replicas: 2  
    revisionHistoryLimit: 10  
    selector:    
        matchLabels:      
            app: httpserver  
    strategy:    
        rollingUpdate:      
            maxSurge: 25%      
            maxUnavailable: 25%    
        type: RollingUpdate  
    template:    
        metadata:      
            creationTimestamp: null      
            labels:        
                app: httpserver    
        spec:      
            containers:        
                - env:            
                    - name: httpport              
                        valueFrom:                
                            configMapKeyRef:                  
                                key: httpport                  
                                name: myenv          
                    image: boboServer/httpserver        
                    imagePullPolicy: IfNotPresent          
                    livenessProbe:            
                        failureThreshold: 3            
                        httpGet:              
                            path: /healthz              
                            port: 8080              
                            scheme: HTTP            
                        initialDelaySeconds: 3            
                        periodSeconds: 7            
                        successThreshold: 1            
                        timeoutSeconds: 1          
                    name: httpserver          
                    readinessProbe:            
                        failureThreshold: 3            
                        httpGet:              
                            path: /healthz              
                            port: 8080              
                            scheme: HTTP            
                        initialDelaySeconds: 3            
                        periodSeconds: 7            
                        successThreshold: 1            
                        timeoutSeconds: 1    
                    
                    lifecycle:
                        postStart:
                            exec:
                                command: ['/bin/sh', '-c', 'echo start httpserver...']
                        preStop:
                            exec:
                                command: ['/bin/sh', '-c', 'echo stop httpserver...']                        
                    resources:            
                        limits:              
                            cpu: 200m              
                            memory: 100Mi            
                        requests:              
                            cpu: 100m              
                            memory:50Mi          
                    terminationMessagePath: /dev/termination-log          
                    terminationMessagePolicy: File      
                dnsPolicy: ClusterFirst      
                imagePullSecrets:        
                    - name: cloudnative      
                restartPolicy: Always      
                schedulerName: default-scheduler      
                securityContext: {}      
                terminationGracePeriodSeconds: 30
            ingressClassName: nginx  
            rules:    
                - host: mod8.bobo.bocai     
                http:        
                    paths:          
                        - backend:              
                            service:                
                                name: httpserver               
                                port:                  
                                    number: 80            
                                path: /            
                                pathType: Prefix
        tls:
            -hosts:
                -mod8-ssl.bobo.bocai
            secretName:mod8-tls
            type: ExternalName  
            externalName: my.database.example.com
