httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: aaronsoar/httpserver
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c', 'echo Starting httpserver...']
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 30Mi
          volumeMounts:
            - name: log-volume
              mountPath: /logs
      volumes:
        - name: log-volume
          emptyDir:
            sizeLimit: 20Mi
