service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-service
    namespace: prod
spec:  
    type: ExternalName  
    externalName: my.database.example.com
