ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
    name: httpserver-80
spec:  
    ingressClassName: nginx  
    rules:    
        - host: mod8.51.cafe      
        http:        
            paths:          
            - backend:              
                service:                
                    name: httpsvc                
                    port:                  
                        number: 80            
                path: /            
                pathType: Prefix
tls:
    -hosts:
        -mod8-ssl.51.cafe
    secretName:mod8-tls
